# dynaarm_description

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: build-humble.yml  build-jazzy.yml  build-kilted.yml  build-rolling.yml  resuable_ici.yml  reusable_ici.yml
config/: config.rviz  dynaarm.srdf  initial_positions.yaml  joint_limits.yaml
doc/: index.md
dynaarm_description_common/: CMakeLists.txt  package.xml
dynaarm_standalone_description/: CMakeLists.txt  package.xml
dynaarm_standalone_description/launch/: config.rviz  view.launch.py
dynaarm_standalone_description/resource/urdf/: dynaarm_standalone.urdf  generate_urdf.py
dynaarm_standalone_description/resource/xacro/: dynaarm_standalone.urdf.xacro
launch/: view.launch.py
meshes/: 100_base_mesh_col.dae  101_shoulder_mesh.dae  101_shoulder_mesh_col.dae  102_upperarm_mesh.dae  102_upperarm_mesh_col.dae  base_mesh.dae  shoulder_mesh.dae  wrist1_mesh.dae
meshes/arowana4/: base_cover_mesh.dae  base_detailed_mesh.dae  base_mesh.dae  elbow_cover_mesh.dae  elbow_detailed_mesh.dae  elbow_mesh.dae  forearm_cover_mesh.dae  forearm_detailed_mesh.dae  forearm_mesh.dae  shoulder_cover_mesh.dae  shoulder_mesh.dae  upperarm_cover_mesh.dae  upperarm_detailed_mesh.dae  upperarm_mesh.dae  wrist1_mesh.dae  wrist2_detailed_mesh.dae  wrist2_mesh.dae  wrist_1_cover_mesh.dae
meshes/baracuda12/: base_mesh.dae  elbow_mesh.dae  forearm_mesh.dae  shoulder_mesh.dae  upperarm_mesh.dae  wrist1_mesh.dae  wrist2_mesh.dae
meshes/collision_meshes/: base_collision_mesh.STL  base_collision_mesh.stl  elbow_collision_mesh.stl  wrist1_collision_mesh.stl  wrist2_collision_mesh.stl
meshes/v1/: base_cover_mesh.dae  base_detailed_mesh.dae  base_mesh.dae  elbow_cover_mesh.dae  elbow_mesh.dae  forearm_cover_mesh.dae  forearm_detailed_mesh.dae  forearm_mesh.dae  shoulder_cover_mesh.dae  (+7 more)
rviz/: config.rviz
urdf/: dynaarm.ros2_control.xacro  dynaarm.urdf  dynaarm.urdf.xacro  dynaarm.xacro  dynaarm_dual_with_torso.urdf.xacro  dynaarm_parameters.urdf.xacro  dynaarm_standalone.urdf.xacro  dynaarm_standalone_dual.urdf.xacro  torso.urdf.xacro  torso_standalone.urdf.xacro
xacro/: dynaarm_standalone.urdf.xacro
(+57 files in other folders)
