<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynaarm_description</name>
  <version>1.0.0</version>
  <description>URDF description for the DUATIC DynaArms</description>

  <license file="LICENSE">BSD-3-Clause</license>

  <author email="jpreisig@duatic.com">Jan Preisig</author>
  <author email="lnachtigall@duatic.com">Lennart Nachtigall</author>
  <author email="tschwarzer@duatic.com">Timo Schwarzer</author>

  <maintainer email="tschwarzer@duatic.com">Timo Schwarzer</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  
  <exec_depend>dynaarm_driver</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
