<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynaarm_standalone_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="timo@software-byts.de">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>dynaarm_description_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
